--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,35 @@
-.App {
-  text-align: center;
+html, body, #root, .app {
+    height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+#root {
+    background-color: rgb(129, 152, 183);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app {
+    background-color: white;
+    max-width: 480px;
+    display: flex;
+    flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.app-header {
+    background-color: rgb(209, 230, 247);
+    margin-bottom: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-header img {
+    display: block;
+    width: 100%;
+    padding: .66rem;
+}
+
+.form-signin {
+    margin: 0 auto;
+    max-width: 330px;
+    text-align: center;
+}
+
+.form-signin .btn-primary {
+    margin-top: .5rem;
 }
